# ValidFi

./: README.md  SECURITY.md
contracts/: Cargo.toml
contracts/src/: access_control.rs  data_sharing.rs  errors.rs  identity_registry.rs  integration_tests.rs  lib.rs  upgrade.rs  upgrade_tests.rs  verification.rs
contracts/test_snapshots/integration_tests/: test_access_expires_after_duration.1.json  test_approve_nonexistent_verification_panics.1.json  test_check_access_denied_for_unknown.1.json  test_extend_access.1.json  test_extend_nonexistent_permission_panics.1.json  test_extend_nonexistent_share_panics.1.json  test_extend_share.1.json  test_full_credential_lifecycle.1.json  test_get_nonexistent_identity_panics.1.json  test_get_nonexistent_permission_panics.1.json  test_get_nonexistent_shared_document_by_parties_panics.1.json  test_get_nonexistent_shared_document_panics.1.json  test_get_nonexistent_verification_panics.1.json  test_get_permission.1.json  test_get_shared_document_by_parties.1.json  test_get_verification_by_identity.1.json  test_get_verification_by_nonexistent_identity_panics.1.json  test_get_verification_status.1.json  test_get_verification_status_nonexistent_panics.1.json  test_grant_and_check_access.1.json  test_is_share_active.1.json  test_is_share_active_nonexistent_panics.1.json  test_mark_verified_and_is_verified.1.json  test_mark_verified_nonexistent_identity_panics.1.json  test_register_and_get_identity.1.json  test_register_multiple_identities_same_owner.1.json  test_reject_nonexistent_verification_panics.1.json  test_revoke_access.1.json  (+12 more)
(+26 files in other folders)
