[package]
name = "securedata-contracts"
version = "0.1.0"
edition = "2021"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]
